# openttd-military-grf

./: .gitignore  CHANGELOG.md  Makefile  Pipfile  README.md  make_gfx.sh  pyproject.toml
military-grf/: custom_tags.txt  header.pnml  main.pnml  military.nml  templates.pnml
military-grf/doc/: new-release.md
military-grf/gfx/: airport_afb.xcf  airport_afb_city_preview.xcf  airport_small.xcf
military-grf/gorender/: air_a6m.json  air_aero_l39ng_v2.json  air_aw101_rotor.json  air_ch37.json  air_ec725.json  air_mi17.json  air_mi26.json  air_mi26_rotor.json  air_mi26_rotor.jsonbck  air_mi38_rotor.json  air_mi6.json  air_sa321_rotor.json  air_uh1_rotor.json  air_uh60.json  air_uh60_rotor.json  calculations.txt  ttd_palette.json
military-grf/lang/: czech.lng  english.lng
military-grf/pnml/: definitions.pnml  sorting.pnml
military-grf/voxels/: air_aero_l39_v2_2cc.vox  air_aero_l39_v2_airforce.vox  air_aero_l39_v2_airforce_za_landing.vox  air_aero_l39_v2_c_landing.vox  air_aero_l39ng_v2_base.vox  air_aero_l39ng_v2_base_landing.vox  air_aw101_af.vox  air_aw101_rotor.vox  air_aw139_2cc.vox  air_aw139_2cc_landing.vox  air_aw139_af.vox  air_aw139_rotor.vox  air_ch148_2cc.vox  air_ch148_af_landing.vox  air_ch37_2cc.vox  air_ch37_2cc_landing.vox  air_ch37_af_landing.vox  air_ch37_rotor.vox  air_ch53_2cc.vox  air_ch53_2cc_landing.vox  air_ch53_af.vox  (+28 more)
resources/: .~lock.airplanes.ods#  airplanes.numbers  airplanes.ods  airplanes.xlsx  f16_liveries.md  ottd-military-items-airplanes.txt  ottd-military-items-helicopters.txt  reference.txt  usable_objects_credits.md
(+553 files in other folders)
